finalized the collision detection system